--- a/build.emscripten/styles.css
+++ b/build.emscripten/styles.css
@@ -2,17 +2,68 @@
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 30px 64px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 48px;
-    margin: 4px 2px;
+    font-size: 32px;
     cursor: pointer;
+    width: 25%;
+    height: 10%;
+    z-index: 1;
+    font-family: 'Righteous';
+}
+
+#finishManageButton {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.topRight
+{
+    position: absolute;
+    top: 15%;
+    right: 15%;
+}
+
+.topLeft
+{
+    position: absolute;
+    top: 15%;
+    left: 15%;
+}
+
+.bottomRight
+{
+    position: absolute;
+    bottom: 15%;
+    right: 15%;
+}
+
+.bottomLeft
+{
+    position: absolute;
+    bottom: 15%;
+    left: 15%;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 8px;
+    font-family: 'Righteous', regular;
+}
+.center {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .dice {
     font-size: 48px;
+    padding: 5px;
 }
 
 .disabled {
@@ -34,10 +85,20 @@
     grid-row: 1;
 }
 
-#buttonContainer {
-    width: 100%;
-    height: 100%;
+.backgroundLayer {
+    z-index: -1;
+}
+
+.foregroundLayer {
+    z-index: 1;
+}
+
+#overlay {
+    width: 960px;
+    height: 960px;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
+
