--- a/build.emscripten/styles.css
+++ b/build.emscripten/styles.css
@@ -17,6 +17,11 @@
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+#gameOverLabel {
+    font-size: 64px;
+    font-family: 'Righteous';
+}
+
 .topRight
 {
     position: absolute;
