--- a/build.emscripten/styles.css
+++ b/build.emscripten/styles.css
@@ -13,13 +13,57 @@
     font-family: 'Righteous';
 }
 
+.bid {
+    float: left;
+    height: calc(50% - 5px);
+    width: calc(50% - 5px);
+    margin: 5px;
+}
+
+.bid:nth-child(1) {
+    margin-left: 0;
+    margin-top: 0;
+}
+
+.bid:nth-child(2) {
+    margin-right: 0;
+    margin-top: 0;
+}
+
+.bid:nth-child(3) {
+    margin-left: 0;
+    margin-bottom: 0;
+}
+
+.bid:nth-child(4) {
+    margin-right: 0;
+    margin-bottom: 0;
+}
+
+.dice {
+    color: #4CAF50; /* Green */
+    font-size: 48px;
+    padding: 5px;
+}
+
+.icon {
+    font-size: 48px;
+    padding: 5px;
+}
+
 #finishManageButton {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
-#gameOverLabel {
+.big-text {
     font-size: 64px;
     font-family: 'Righteous';
+}
+
+#bidContainer {
+    float: left;
+    width: 40%;
+    height: 20%;
 }
 
 .topRight
@@ -38,6 +82,7 @@
 
 .bottomRight
 {
+    float: right;
     position: absolute;
     bottom: 2.5%;
     right: 2.5%;
@@ -45,6 +90,7 @@
 
 .bottomLeft
 {
+    float: left;
     position: absolute;
     bottom: 2.5%;
     left: 2.5%;
@@ -55,9 +101,11 @@ table {
 }
 
 th, td {
+    font-size: 24px;
     padding: 8px;
     font-family: 'Righteous', regular;
 }
+
 .center {
     display: flex;
     position: absolute;
@@ -66,9 +114,12 @@ th, td {
     text-align: center;
 }
 
-.dice {
-    font-size: 48px;
-    padding: 5px;
+.middleRight {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    position: absolute;
+    right: 2.5%;
 }
 
 .disabled {
