--- a/build.emscripten/styles.css
+++ b/build.emscripten/styles.css
@@ -56,11 +56,6 @@
     padding: 5px;
 }
 
-table {
-    min-width: 50%;
-    user-select: none;
-}
-
 #finishManageButton {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
@@ -112,16 +107,33 @@ table {
 
 table {
     border-collapse: collapse;
+    min-width: 50%;
+    user-select: none;
+    max-height: 50%;
+}
+
+#tradeContainer {
+    display: block;
+    overflow: auto;
+    width: 100%;
+    max-height: 50%;
+}
+
+#tradeTable {
+    width: 100%;
+    max-height: 100%;
+    table-layout: fixed;
+    text-align: center;
 }
 
 th, td {
     font-size: 24px;
     padding: 8px;
     font-family: 'Righteous', regular;
+    align-content: center;
 }
 
 .center {
-    display: flex;
     position: absolute;
     align-items: center;
     justify-content: center;
